# nixinstall

./: .gitignore  README.md  pyproject.toml
src/nixosinstall/: __main__.py  backends.py  cli.py  config_io.py  models.py  nix.py  tui.py
tests/: test_backends.py  test_cli.py  test_models.py  test_rendering.py
