[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "nixosinstall"
version = "0.1.0"
description = "Guided NixOS installer prototype"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
nixosinstall = "nixosinstall.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
